# didactic-broccoli

./: .env.example  .gitignore  README.md  backfill_embeddings.py  demo.py  pyproject.toml  simple_demo.py  test_tui.py
openspec/: project.md
openspec/changes/add-all-articles-view/: tasks.md
openspec/changes/add-liked-articles-view/: tasks.md
openspec/changes/add-ml-recommendations/: proposal.md  tasks.md
openspec/changes/add-project-foundation/: design.md  proposal.md  tasks.md
openspec/changes/add-reader-word-wrap/: design.md  proposal.md  tasks.md
openspec/changes/add-recommended-feed/: design.md  proposal.md  tasks.md
openspec/changes/add-tavily-extraction/: proposal.md  tasks.md
openspec/changes/add-tui-interface/: design.md  tasks.md
openspec/changes/archive/add-all-articles-view/: COMPLETED.md  design.md  proposal.md  tasks.md
openspec/changes/archive/add-liked-articles-view/: COMPLETED.md  design.md  proposal.md  tasks.md
openspec/changes/archive/add-ml-recommendations/: COMPLETED.md  design.md  tasks.md
openspec/changes/archive/add-reader-word-wrap/: COMPLETED.md  tasks.md
openspec/changes/archive/add-recommended-feed/: COMPLETED.md  tasks.md
openspec/changes/archive/add-tavily-extraction/: COMPLETED.md  design.md  tasks.md
rss_reader/: __init__.py
rss_reader/db/: __init__.py  connection.py  models.py  schema.py
rss_reader/fetcher/: __init__.py  article_extractor.py  feed_parser.py  pipeline.py
rss_reader/ml/: __init__.py  clustering.py  embeddings.py  recommendations.py  vector_store.py
rss_reader/ui/: __init__.py  app.py
rss_reader/ui/widgets/: __init__.py  article_list.py  article_reader.py  dialogs.py  feed_list.py
tests/: __init__.py  test_db.py  test_fetcher.py  test_integration.py  test_ml.py
tests/fixtures/: sample_feed.py
(+13 files in other folders)
