[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-reader"
version = "0.1.0"
description = "A personalized RSS reader with ML-powered recommendations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "feedparser>=6.0",
    "newspaper3k>=0.2",
    "requests>=2.31",
    "lxml_html_clean",
    "textual>=0.40",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
tavily = [
    "tavily-python>=0.3.0",
]

[project.scripts]
rss-reader = "rss_reader.ui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rss_reader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
